내용 일부 수정

--- a/_posts/2020-09-21-200921(월).md
+++ b/_posts/2020-09-21-200921(월).md
@@ -1,5 +1,6 @@
-200921(월)
-=========
+vue.js
+------
+
 ```
 <!DOCTYPE html>
 <html lang="en">
@@ -51,6 +52,7 @@
 * 그래서 빈 문자열이라도 정의해 놓는것이 좋다 -> 그래야 반응성을 가지니까!
 
 <hr/>
+
 ```
 <!DOCTYPE html>
 <html lang="ko">
@@ -101,6 +103,7 @@
 </body>
 </html>
 ```
+
 <hr/>
 <img width="359" alt="200921-01" src="https://user-images.githubusercontent.com/47624978/93777253-7ac45000-fc5f-11ea-8938-3ae0abad7617.png">
 
