--- a/_posts/2020-10-04-201004(일).md
+++ b/_posts/2020-10-04-201004(일).md
@@ -1,8 +1,8 @@
-201004(일)
-=========
+
 Vue.js
 ------
-## v-if
+
+### v-if
 * v-if
 * v-else if
 * v-else 조건을 굳이 달 필요가 없다
@@ -13,7 +13,7 @@ v-if는 바인딩 되어있는 요소의 참, 거짓 여부에 따라 요소 자
 
 <hr/>
 
-## v-show
+### v-show
 참, 거짓 여부로 요소를 display-none으로 안보이도록 한다
 
 <hr/>
