--- a/_posts/2020-10-09-201009(금).md
+++ b/_posts/2020-10-09-201009(금).md
@@ -25,19 +25,19 @@ vue.js
 
 ### 컴포넌트의 Language Blocks
 
-#### <template>
+#### template
 * 기본 언어 : html
 * 각 *.vue 파일은 한번에 최대 하나의 template 블록을 포함할 수 있음
 
 <br>
 
-#### <script>
+#### script
 * 각 *.vue 파일은 한번에 최대 하나의 script 블록을 포함할 수 있음
 * require()보다는  import와 export를 사용 권장
 
 <br>
 
-#### <style>
+#### style
 * 기본 언어 : css
 * 한개의 *.vue에서 여러개의 style 태그를 지원
 * style 태그는 scoped 또는 module 속성을 가질 수 있음
