--- a/_posts/2020-09-07-200907(월).md
+++ b/_posts/2020-09-07-200907(월).md
@@ -1,7 +1,6 @@
-200907(월)
-=========
-### * Vue
-#### 1. 선언적 렌더링   
+vue.js
+------
+### 1. 선언적 렌더링   
 Vue에는 간단한 템플릿 문법({{ ... }})을 사용하여 DOM에서 데이터를 선언적으로 렌더링 할 수 있다.   
 ```
 //html
@@ -18,8 +17,8 @@ var app = new Vue({
     }
 })
 ```   
-#### 2. 반응형   
+### 2. 반응형   
 Vue가 사용된 요소들은 반응형으로 바뀌게 되는데-웹페이지의 크기에 따라 동작하는 그 반응형이 아님-   
 변경된 데이터가 자동적으로 화면에 렌더링 되는 것을 의미한다   
-#### 3. 디렉티브   
+### 3. 디렉티브   
 v- 접두어가 붙어 있는 속성들은 디렉티브라고 하며, Vue에서 제공하는 특수 속성이다
