--- a/_posts/2020-09-25-200925(금).md
+++ b/_posts/2020-09-25-200925(금).md
@@ -1,7 +1,6 @@
-200925(금)
-=========
-부트스트랩
--------
+bootstrap
+---------
+
 ```
 <!DOCTYPE html>
 <html lang="en">
@@ -20,6 +19,7 @@
 ```
 
 * 부트스트랩을 이용하는 방법은 cdn 이용하기 / 파일을 다운받아서 직접 경로 링크 걸기 두가지가 있다
+
 <hr/>
 
 ```
