--- a/_posts/2020-09-26-200926(토).md
+++ b/_posts/2020-09-26-200926(토).md
@@ -1,7 +1,5 @@
-200926(토)
-=========
-부트스트랩
--------
+bootstrap
+---------
 
 ```
  <div class="container" style="padding-top:50px"">
@@ -13,8 +11,10 @@
     <a href="" class="btn btn-danger">danger</a>
 </div>
 ```
+
 * 6가지의 버튼이 있음
 <img width="479" alt="스크린샷 2020-09-26 오전 11 16 07" src="https://user-images.githubusercontent.com/47624978/94327959-bce7eb80-ffe9-11ea-8494-d00057b7f8d0.png">
+
 <hr/>
 
 ```
@@ -44,6 +44,7 @@
     </div>
 </div>
 ```
+
 * 테이블 컴포넌트
 <img width="1177" alt="스크린샷 2020-09-26 오전 11 25 20" src="https://user-images.githubusercontent.com/47624978/94328153-0553d900-ffeb-11ea-9634-a3a846e51ab5.png">
 <hr/>
@@ -108,6 +109,7 @@
         </ul>
 </div>
 ```
+
 * 폼 컴포넌트
 * form-inline class를 추가하지 않으면 줄바꿈이 된다
 * label에 for로 input의 id와 연결하면 label을 클릭해도 input에 영향을 미친다(ex 체크박스)
@@ -153,6 +155,7 @@
         </div>
     </div>
 ```
+
 * 모바일용 버튼은 네비바 헤더에 넣어야함
 * 데이터 타겟을 맞춰줘야함 (안맞추면 출력 안됨)
 * navbar navbar-inverse로 메뉴바 색상 반전 가능(default은 흰색, inverse는 검정)
