--- a/_posts/2020-10-19-201019(월).md
+++ b/_posts/2020-10-19-201019(월).md
@@ -1,10 +1,10 @@
 Firebase
 ------
-요즘 만들고 있는 문진문진(가제)...에서 우리는 Firebase의 *Cloud Firebase*를 사용하기로 했다
+요즘 만들고 있는 문진문진(가제)...에서 우리는 Firebase의 *Cloud Firestore*를 사용하기로 했다
 
 <br/>
 
-### Cloud Firebase 기본 세팅 
+### Cloud Firestore 기본 세팅 
 1. 안내에 따라 Firebase를 웹 앱에 추가한다
 2. Firebase 및 Cloud Firestore 라이브러리를 앱에 추가한다
 3. Cloud Firestore 인스턴스를 초기화한다
