--- a/_posts/2020-11-15-201115(일).md
+++ b/_posts/2020-11-15-201115(일).md
@@ -1,6 +1,6 @@
 정보처리기사(실기)
 ----------
-## 1. 요구사항 확인
+## 1-01. 요구사항 확인
 * 현행 시스템 파악이란?
     * 현행 시스템이 어떤 하위 시스템으로 구성되어 있는지
     * 제공 기능 및 연계 정보는 무엇인지
