--- a/_posts/2020-11-23-201123(월).md
+++ b/_posts/2020-11-23-201123(월).md
@@ -3,13 +3,13 @@
 ## 5-02 인터페이스 기능 구현
 
 * 인터페이스 기능 구현 정의
-1. 모듈 간 세부 설계서 확인
+1) 모듈 간 세부 설계서 확인
     * 컴포넌트 명세서
         * 컴포넌트의 개요, 내부 클래스의 동작, 인터페이스를 통해 외부와 통신하는 명세를 정의
     * 인터페이스 명세서
         * 컴포넌트 명세서에 명시된 인터페이스 클래스의 세부적인 조건 및 기능을 명시한 명세서
-2. 일관되고 정형화된 인터페이스 기능 정의
-3. 정의된 인터페이스 기능에 대한 정형화
+2) 일관되고 정형화된 인터페이스 기능 정의
+3) 정의된 인터페이스 기능에 대한 정형화
 
 * 인터페이스 기능 구현
     1. 사전에 정의된 기능에 대한 구체적 분석
