--- a/_posts/2020-11-24-201124(화).md
+++ b/_posts/2020-11-24-201124(화).md
@@ -90,6 +90,9 @@
        * 비기능적 요구사항: 사용성, 효율성, 신뢰성, 유지보수성, 재사용성 등 품질에 관한 / 플랫폼, 사용 기술 등 시스템 환경에 관한 / 비용, 일정 등 프로젝트 계획에 관한 요구사항
     3. UI 요구사항 확인
 
+<br/>
+<hr/>
+
 * UI 표준이란?
     * 디자인 철학과 원칙 기반하에 전체 시스템에 공통으로 적용되는 화면 간 이도으 화면구성 등에 관한 규약
 
@@ -155,3 +158,88 @@
 
 <br/>
 <hr/>
+
+* UI 지침(Guideline)이란?
+    * UI 표준에 따라 사용자 인터페이스 설계, 개발 시 지켜야할 세부 사항을 규정하는 가이드라인
+
+* UI 표준 적용을 위한 환경 분석
+    * 사용자 트렌드 분석
+    * 기능 조작성 분석
+    * 오류 방지 분석
+    * 최소한의 조작으로 업무 처리 가능 여부 확인
+    * UI의 정보 전달력 확인
+    
+* UI 개발을 위한 주요 기법
+    * 3C 분석 - 고객(Customer), 경쟁하고 있는 자사(Company), 경쟁사(Competitor)를 비교, 분석
+    * SWOT 분석 - 강점(Strength), 약점(Weakness), 기회(Opportunity), 위협(Threaet) 요인을 규정
+    * 시나리오 플래닝 - 불확실성이 높은 상황 변화를 사전에 예측하고 다양한 시나리오를 설계하는 방법으로 불확실성을 제거
+    * 사용성 테스트 - 사용자가 직접 제품을 사용하면서 미리 작성된 시나리오에 맞추어 과제를 수행한 후, 질문에 답함
+    * 워크숍(Workshop) - 소집단 정도의 인원으로 특정 문제나 과제에 대한 새로운 지식, 기술, 아이디어 방법들을 서로 교환, 검토
+
+* 프로파일(Profile): 어떤 시스템을 일정 범위 내에서 한정적으로 특징 지우는 그룹화된 값
+* 리서치(Research): 지식에 대한 탐구를 기반으로 한 인간 활동
+
+* 사용자 요구사항 도출
+    * 페르소나(Persona) 정의: 잠재적 사용자의 다양한 목적과 관찰된 행동 패턴을 응집시켜 놓은 가상의 사용자
+    * 콘셉트 모델 정의: 여러가지 추상적인 콘셉트들 사이의 관계를 보여주는 다이어그램
+        * 브레인 스토밍 활용
+    * 사용자 요구사항 정의: 리서치 및 페르소나 결과물을 토대로 요구사항을 도출하고, 우선순위를 정함
+        * 요구사항 매트릭스 작성: 다양한 경로를 통해 수집된 직접적인 요구사항을 검토하여, 페르소나의 목적을 기준으로 만든 요구사항 표
+        * 정황 시나리오 제작: 요구사항 정의에 사용되는 초기 시나리오
+    * UI 컨셉션: 정리된 요구사항을 구체화하는 단계 / 화면 디자인 단계 전에 대표 화면 설계를 진행
+
+<br/>
+<hr/>
+
+* 스토리보드(Storyboard)란?
+    * UI 화면 설계를 위해서 정책이나 프로세스 및 콘텐츠의 구성, 와이어 프레임(UI, UX), 기능에 대한 정의, 데이터베이스의 연동 등 구축하는 서비스를 위한 대부분 정보가 수록된 문서
+    * UI 화면 설계를 위해서는 와이어 프레임, 스토리보드, 프로토타입이 활용됨
+
+* UI 화면 설계 구분
+    * 와이어 프레임(Wireframe): 이해관계자들과 화면구성을 협의하거나 서비스의 간략한 흐름을 공유하기 위해 화면 단위의 레이아웃을 설계하는 작업
+    * 스토리보드(Storyboard): 정책, 프로세스, 콘텐츠 구성, 와이어 프레임(UI, UX), 기능 정의, 데이터베이스 연동 등 서비스 구축을 위한 모든 정보가 담겨있는 설계 산출물
+    * 프로토타입(Prototype): 정적인 화면으로 설계된 와이어 프레임 또는 스토리 보드에 동적 효과를 적용하여 실제 구현된 것처럼 시뮬레이션할 수 있는 모형
+
+* 스토리보드 작성 절차
+    1. 전체 개요 작성
+    2. 서비스 흐름 작성
+    3. 스타일 확정
+    4. 메뉴별 화면 설계도 작성 및 상세설명
+    5. 추가 관련 정보 작성
+
+* 스토리보드 작성 시 유의사항
+    * 일관된 기호의 표시
+    * 공통 영역의 정의
+    * 영역별 세부 설계
+    * 버전 업 관리
+
+<br/>
+<hr/>
+
+* 프로토타입이란?
+    * 컴퓨터 시스템이나 소프트웨어의 설계 또는 성능, 구현 가능성, 운용 가능성을 평가하거나 요구사항을 좀 더 잘 이해하고 결정하기 위하여 전체적인 기능을 간략한 형태로 구현한 시제품
+    * 사용자의 요구사항이 정확하게 반영될 때까지 지속적으로 개선하고 보완해서 최종 설계를 완성한다
+
+* 프로토타입의 의의
+    * 사전에 프로토타입을 먼저 제작하고 이를 기반으로 UI의 저정성을 평가, 수정 및 보완함으로써 추후 밣생 가능한 오류들을 사전에 방지한ㄴ 효과
+    * 시스템 설계 및 개발에 소요되는 총 비용과 노력을 절감 가능
+
+* 프로토타입의 장점
+    * 사용자 설득과 이해가 쉬움
+    * 개발 시간 감소
+    * 오류 사전 발견을 통한 예방 가능
+
+* 프로토타입의 단점
+    * 수정 과정 증가 시, 작업 시간 증가 위험 존재
+    * 요구사항에 대한 적절한 타협 필요
+    * 자원 효율성 관점에서는 필요 이상의 많은 자원 소모
+
+* UI 프로토타입 유형
+    * 아날로그: 종이와 펜을 활용하여 화면의 구조를 스케치하는 프로토타입
+    * 디지털: 디지털 편집기, HTML 등의 프로토타이핑 도구를 사용해 화면의 구조를 만드는 프로토타입
+
+* UI 프로토타입 제작 및 검토 프로세스
+    1. 소프트웨어 **아**키텍처 설계 원리 확인
+    2. 프로토타입 **유**스케이스 작성
+    3. UI 요구사항을 반영한 **프**로토타입 제작
+    4. UI **적**정성 검토
