--- a/_posts/2020-11-26-201126(목).md
+++ b/_posts/2020-11-26-201126(목).md
@@ -333,32 +333,116 @@
     * 주어진 테스트 케이스에 의해 수행되는 소프트웨어의 테스트 범위를 측정하는 테스트 품질 측정 기준
     * 테스트의 정확성과 신뢰성을 향상시킴
 
-(수정 필요)
-
 * 테스트 커버리지 유형
-    * 기능 기반 커버리지
-    * 라인 커버리지
-    * 코드 커버리지
+    * 기능 기반 커버리지: 테스트 대상 애플리케이션 전체 기능을 모수로 설정
+    * 라인 커버리지: 애플리케이션 전체 소스 코드의 라인 수를 모수로 설정 / 단위 테스트에서는 이 라인 커버리지를 척도로 삼음
+    * 코드 커버리지: 소스 코드의 구문, 조건, 결정 등의 구조 코드 자체가 얼마나 테스트 되어있는지를 측정하는 방법
 
 * 코드 커버리지
-    * 구문 커버리지
-    * 결정 커버러지
-    * 조건 커버리지
-    * 조건/결정 커버리지
-    * 변경 조건/결정 커버리지
-    * 다중 조건 커버리지
+    * 구문 커버리지: 프로그램 내의 모든 명령문을 적어도 한 번 수행하는 커버리지 / 조건문 결과와 관계없이 구문 실행 개수로 계산
+    * 결정 커버러지: 프로그램 내의 전체 결정문이 적어도 한 번은 참과 거짓의 결과를 수행하는 커버리지
+    * 조건 커버리지: 결정 명령문 내의 각 조건이 적어도 한 번은 참과 거짓의 결과가 되도록 수행하는 커버리지
+    * 조건/결정 커버리지: 전체 조건식뿐만 아니라 개별 조건식도 참 한번, 거짓 한번 결과가 되도록 수행하는 커버리지
+    * 변경 조건/결정 커버리지: 각 개별 조건식이 다른 개별 조건식에 영향을 받지 않고 전체 조건식에 독립적으로 영향을 주도록 함
+    * 다중 조건 커버리지: 결정 조건 내 모든 개발 조건식의 모든 가능한 조합을 100% 보장하는 커버리지
 
 * 결함 심각도별 분류
-    * 치명적 결함
-    * 주요 결함
-    * 보통 결함
-    * 경미한 결함
-    * 단순 결함
+    * 치명적(Critical) 결함: 기능이나 제품의 테스트를 완전히 방해하거나 못하게 하는 결함
+    * 주요(Major) 결함: 기능이 기대와 많이 다르게 동작하거나 그 기능이 해야하는 것을 못하는 결함
+    * 보통(Normal) 결함: 제품이나 프로그램이 특정 기준을 충족하지 못하거나 전체에 영향을 주지 않는 일부 기능이 부자연스러운 결함
+    * 경미한(Minor) 결함: 사용상의 불편함을 유발하는 결함
+    * 단순(Simple) 결함: 사소한 버그라고 하며, 기능에는 영향이 없지만 수정되어야 하는 결함
 
 * 결함 우선순위
     * 발생한 결함이 얼마나 짜르게 처리되어야 하는지를 결정하는 척도
     * 결함 심각도가 높아도 우선순위가 반드시 높은 것은 아님
-    * 결정적
-    * 높음
-    * 보통
-    * 낮음
+    * 결정적(Critical): 이슈가 발생하면 일반적으로 전체 기능이 동작하지 않고, 어떤 테스트도 더 이상 진행할 수 없음
+    * 높음(High): 중요한 결함이 수정되는 동안, 이 우선순위의 결함은 종료 기준에 대한 테스트 활동을 하기 위해서 수정되어야 하는 다음 후보가 됨
+    * 보통(Medium): 실패가 발생했을 때 올바른 에러 메세지가 출력되지 않는 것과 갘은 에러가 이 우선순위로 분류될 수 있음
+    * 낮음(Low): 디자인에서 일부 강화하거나 사용자 경험을 향상시키기 위한 작은 기능 구현에 대한 요청이 우선순위로 분류
+
+<hr/>
+<br/>
+
+## 7-03 애플리케이션 성능 개선
+
+* 애플리케이션 성능 측정 지표
+    * 처리량(Throughput): 애플리케이션 주어진 시간에 처리할 수 있는 트랜잭션의 수
+    * 응답 시간(Response Time): 사용자 입력이 끝난 후, 애플리케이션의 응답 출력이 개시될 때까지의 시간
+    * 경과 시간(Turnaround Time): 애플리케이션에 사용자가 요구를 입력한 시점부터 트랜잭션을 처리 후 그 결과의 출력이 완료될 때까지 걸리는 시간
+    * 자원 사용률(Resource Usage): 애플리케이션이 트랜잭션을 처리하는 동안 사용하는 CPU 사용량, 메모리 사용량, 네트워크 사용량
+
+* 유형별 성능 분석 도구
+    * 성능/부하/스트레스 점검 도구
+        * 애플리케이션의 성능 점검을 위해 가상의 사용자를 점검 도구 상에서 인위적으로 생성한 뒤, 시스템의 부하나 스트레스를 통해 성능 측정 지표인 처리량, 응답 시간, 경과 시간 등을 점검하기 위한 도구
+    * 모니터링 도구
+        * 애플리케이션 실행 시 자원 사용량을 확인하고 분석 가능한 도구
+    
+* 데이터베이스 관련 성능 저하 원인
+    * 데이터베이스 락(DB Lock): 대량의 데이터 조회, 과도한 업데이트, 인덱스 생성 시 발생하는 현상
+    * 불필요한 데이터베이스 패치(DB Fetch): 실제 필요한 데이터보다 많은 대량의 데이터 요청을 들어올 경우 웅답 시간 저하 현상 발생
+    * 연결 누수(Connection Leak): DB 연결과 관련한 JDBC 객체를 사용 후 종료하지 않은 경우 발생
+    * 부적절한 커넥션 풀 크기(Connection Pool Size): 너무 작거나 쿠게 설정한 경우 성능 저하 현상이 발생할 가능성 존재
+    * 확정(Commit) 관련: 트랜잭션이 확정(Commit)되지 않고 커넥션 풀에 반환될 때 성능 저하 가능성 존재
+
+* 내부 로직으로 인한 성능 저하 원인
+    * 웹 애플리케이션의 인터넷 접속 불량
+    * 특정 파일의 업로드, 다운로드로 인한 성능 저하
+    * 정상적으로 처리되지 않는 오류 처리로 인한 성능 저하
+
+* 외부 호출(HTTP, 소켓 통신)로 인한 성능 저하 원인
+    * 임의의 트랜잭션이 수행되는 동안 외부 트랜잭션이 장시간 수행되거나 타임 아웃이 일어나는 경우
+
+* 잘못된 환경 설정이나 네트워크 문제로 인한 성능 저하 원인
+    * 환경 설정으로 인한 성능 저하: 스레드 풀(Thread Pool), 힙 메모리(Heap Memory)의 크기를 너무 작게 설정하면 Heap Memory Full 현상 발생으로 성능 저하 가능성 존재
+    * 네트워크 장비로 인한 성능 저하: 네트워크 관련 장비 간 데이터 전송 실패 또는 전송 지연에 따른 데이터 손실 발생 시 애플리케이션의 성능 저하 또는 장애 발생 가능성 존재
+
+<hr>
+
+* 애플리케이션 성능 테스트 수행 절차
+    1. 성능 테스트 도구 설치 - 대상 시스템에 선정된 테스트 도구 설치
+    2. 테스트 환경 설정 - 해당 시스템의 운영체제, DBMS 버전, 네트워크 상태 등에 대해 설정
+    3. 시나리오 생성 - 테스트 목적에 맞는 부하 형태, 파라미터, 사용자 수, Ramp-up load, 수행 시간, 모니터링 결과 저장 파일 등의 정보 설정
+    4. 성능 테스트 실행 및 모니터링 - 성능 테스트를 수행하면서 테스트 상황을 도구를 통해 모니터링
+
+* 애플리케이션 성능 개선
+    * 소스 코드 최적화란?   
+        * 읽기 쉽고 변경 및 추가가 쉬운 클린 코드를 작성하는 것
+    
+* 나쁜 코드(Bad Code)란?
+    * 다른 개발자가 로직(Logic)을 이해하기 어렵게 작성된 코드
+    * 오염: 비즈니스 기능을 수행하지 못하는 많은 컴포넌트들이 존재
+    * 문서 부족: 현재 코드와 문서가 일치하지 않고 수정과 변경을 위한 도메인 지식은 크게 증가하지만 개발자의 지식부족 초래
+    * 의미 없는 이름: 함수, 클래스, 컴포넌트 이름들이 명확한 의미를 갖지 못하거나 실제 작동과 볼일치
+    * 높은 결합도: 클래스와 컴포넌트 간에 데이터와 컨트롤 흐름이 네트워크로 복잡하게 연결
+    * 아키텍처 침식: 아키텍처가 더 이상 구별되지 않고 여러 솔루션으로 이루어저 아키텍터상 변형들로 인해 시스템 품질이 떨어짐
+
+* 클린 코드(Clean Code)란?
+    * 잘 작성되어 가독성이 높고, 단순하며, 의존성을 줄이고, 중복을 최소화하여 깔끔하게 잘 정리된 코드
+    * 중복 코드 제거로 애플리케이션의 설계가 개선됨
+    * 가독성이 높으므로 애플리케이션의 기능에 대해 쉽게 이해 가능
+    * 버그를 찾기 쉬워지며, 프로그래밍 속도가 빨라짐
+    * 의미 있는 이름: 변수나 클래스, 메서드 명을 의도가 분명한 이름으로 사용
+    * 간결하고 명확한 주석: 주석이 필요한 경우 최대한 간결하고 명확하게 작성
+    * 보기 좋은 배치: 읽는 사람이 편하게 읽을 수 있도록 구성
+    * 작은 함수: 함수는 가급적 작게 만들고 if문이나 while문 안의 내용은 한줄로 처리되도록 작성
+    * 읽기 쉬운 제어 흐름: 조건, 루프, 흐름을 통제하는 선언문이 코드에 있으면 코드가 읽기 어려움
+    * 오류 처리: 오류코드의 반환보다 예외 처리를 활용
+    * 작성 원칙 -> 가독성, 단순성, 의존성 최소화, 중복성 최소화, 추상화 사용
+
+* 소스 코드 품질분석이란?
+    * 소스 코드에 대한 코딩 스타일, 설정된 코딩 표준, 코드의 복잡도, 코드 내에 존재하는 메모리 누수 현황, 스레드의 결함 등을 발견하기 위한 활동
+    * 정적 분석 도구
+        * 작성된 소스 코드를 실행시키지 않고, 코드 자체만으로 코딩 표준 준수 여부, 코딩 스타일 적정 여부, 잔존 결함 발견 여부를 확인하는 코드 분석 도구
+        * pmd, cppcheck, SonarQube, checkstyle 등
+    * 동적 분석 도구
+        * 애플리케이션을 실행하여 코드에 존재하는 메모리 누수 현황을 발견하ㄱ, 발생한 스레드이 결함 등을 분석하기 위한 도구
+        * Avalanche, Valgrind
+
+* 애플리케이션 성능 개선 방안
+    * 소스 코드 최적화 기법 적용
+    * 아키텍처 조정을 통한 성능 개선
+    * 프로그램 호출 순서 조정 적용
+    * 메모리 사용 최소화 적용
+    * 입출력 발생 최소화 적용
+    * System.out.println()을 사용 제외
