--- a/_posts/2020-11-20-201120(금).md
+++ b/_posts/2020-11-20-201120(금).md
@@ -301,7 +301,7 @@ END;
 * 결합도(Coupling)란?
     * 모듈 내부가 아닌 외부의 모듈과의 연관도 또는 모듈 간의 상호의존성
     * 소프트웨어 구조에서 모듈 간의 관련성을 측정하는 척도
-    * (결합도 높음, 나쁜 품질) 내용 - 고통 - 외부 - 제어 - 스탬프 - 자료 결합도 (결합도 낮음, 좋은 품질)
+    * (결합도 높음, 나쁜 품질) 내용 - 공통 - 외부 - 제어 - 스탬프 - 자료 결합도 (결합도 낮음, 좋은 품질)
 * 공통 모듈 구현 대상
     * 공통 모듈은 화면 모듈, 화면에서 입력받은 데이터 처리를 위한 서비스 컴포넌트, 비즈니스 트랜잭션 컴포넌트 등이 있음
 * MVC 패턴 구성
