--- a/_posts/2020-11-24-201124(화).md
+++ b/_posts/2020-11-24-201124(화).md
@@ -13,6 +13,7 @@
     * FitNesse: 웹 기반 테스트 케이스 설계/실행/결과 확인 등을 지원하는 프레임워크
     * Selenium: 다양한 브라우저 지원 및 개발언어를 지원하는 웹 애플리케이션 테스트 프레임워크
     * watir: 루비(Ruby) 기반 웹 애플리케이션 테스트 프레임워크
+    * NTAF: FitNesse의 장점인 협업 기능과 STAF의 장점인 재사용 및 확장성을 통합한 NJN의 테스트 자동화 프레임워크
 
 * 인터페이스 감시 도구란?
     * 인터페이스의 동작이 잘 진행되는지 지속적으로 확인하기 위해서는 애플리케이션 모니터링 툴(APM; Application Performance Management)을 사용하여 동작 상태를 감시할 수 있음
